# copier-telegram-bot

./: .gitignore  CODE_OF_CONDUCT.md  README.md  copier.yaml  example_data.yaml  justfile
.github/: dependabot.yml
example/: .template.env  Dockerfile  README.md  compose.yaml  pyproject.toml
example/.github/: dependabot.yml
example/bot/: __main__.py
example/bot/cache/: redis.py
example/bot/core/: loader.py  settings.py
example/bot/database/models/: __init__.py  base.py  user.py
example/bot/dialogs/: __init__.py
example/bot/dialogs/example/: dialogs.py
example/bot/handlers/: __init__.py  error.py  start.py  user_block.py
example/bot/middleware/: __init__.py  logger.py  user_register.py
example/bot/services/: user.py
example/bot/services/errors/: __init__.py  user.py
example/locales/en/LC_MESSAGES/: bot.ftl
example/migrations/: env.py
example/migrations/versions/: 20250816083628_add_users_table.py
extensions/: context.py  is_installed.py  is_valid.py
template/: .env.jinja  Dockerfile.jinja  README.md.jinja  compose.yaml  compose.yaml.jinja  entrypoint.sh  entrypoint.sh.jinja  pyproject.toml.jinja  requirements.txt  {% if 'alembic' in features %}alembic.ini{% endif %}  {% if 'just' in features %}justfile{% endif %}.jinja  {% if package_manager == 'pip' %}pyproject.toml{% endif %}.jinja  {% if package_manager == 'poetry' %}pyproject.toml{% endif %}.jinja  {% if package_manager == 'uv' %}pyproject.toml{% endif %}.jinja
template/bot/: __main__.py.jinja
template/tasks/: cleanup.py  create_templates.py  filter_requirements.py  git_init.py  pip_install.py  (+2 more)
(+26 files in other folders)
